
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int git_repository ;
typedef int git_blame_options ;
typedef int git_blame ;


 int GIT_BLAME_OPTIONS_INIT ;
 int GIT_ERROR_CHECK_ALLOC (int *) ;
 int assert (int ) ;
 int blame_internal (int *) ;
 int * git_blame__alloc (int *,int ,char const*) ;
 int git_blame_free (int *) ;
 int load_blob (int *) ;
 int normalize_options (int *,int *,int *) ;

int git_blame_file(
  git_blame **out,
  git_repository *repo,
  const char *path,
  git_blame_options *options)
{
 int error = -1;
 git_blame_options normOptions = GIT_BLAME_OPTIONS_INIT;
 git_blame *blame = ((void*)0);

 assert(out && repo && path);
 if ((error = normalize_options(&normOptions, options, repo)) < 0)
  goto on_error;

 blame = git_blame__alloc(repo, normOptions, path);
 GIT_ERROR_CHECK_ALLOC(blame);

 if ((error = load_blob(blame)) < 0)
  goto on_error;

 if ((error = blame_internal(blame)) < 0)
  goto on_error;

 *out = blame;
 return 0;

on_error:
 git_blame_free(blame);
 return error;
}
